--- a/templates/base.html
+++ b/templates/base.html
@@ -86,9 +86,11 @@
                     <button class="text-white">
                         <i data-lucide="heart" class="w-6 h-6"></i>
                     </button>
+                    <a href="/cart">
                     <button class="text-white">
                         <i data-lucide="shopping-cart" class="w-6 h-6"></i>
                     </button>
+                </a>
                     <button class="text-white">
                         <i data-lucide="user" class="w-6 h-6"></i>
                     </button>
